--- a/Reboot/wwwroot/codigoWeb/clientes.html
+++ b/Reboot/wwwroot/codigoWeb/clientes.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>Clientes</title>
+  <meta charset="utf-8" />
+  <title>Clientes</title>
 </head>
 <body>
   <h1>Listado de clientes</h1>
@@ -11,9 +11,9 @@
 
   <script type="text/javascript">
 
-    const obtenerClientes = async (url) => {
+    const obtenerClientes = async () => {
 
-      let url = 'http://localhost:5111/api/Articulos/ObtenerClientes';
+      let url = 'http://localhost:5111/api/Clientes';
 
       let dataResponse;
 
@@ -31,7 +31,7 @@
         miDiv.innerHTML += cliente.nombreCliente + "<br/>";
       })
 
-    //  return dataResponse;
+      //  return dataResponse;
 
     }
 
