--- a/Reboot/wwwroot/codigoWeb/articulos.html
+++ b/Reboot/wwwroot/codigoWeb/articulos.html
@@ -7,7 +7,7 @@
 <body style="font-family: Arial">
 
 
-  <input type="text" placeholder="Buscar..." id="txtBuscar" onkeyup="buscarArticulos()"  /> 
+  <input type="text" placeholder="Buscar..." id="txtBuscar" onkeyup="buscarArticulos2()"  /> 
   <!--<input type="button" value="Buscar" />-->
   <hr />
   <div id="misArticulos">Resultado de la busqueda</div>
@@ -45,6 +45,81 @@
 
     }
      
+    const buscarArticulos2 = async () => {
+
+      let textoBuscar = document.getElementById('txtBuscar').value;
+
+      if (textoBuscar.length < 3) {
+        return;
+      }
+
+      let url = 'http://localhost:5111/api/ArticuloFerreterias/BuscarArticulos/' + textoBuscar;
+
+      let dataResponse;
+
+      await fetch(url)
+        .then((response) => response.json())
+        .then((data) => {
+          dataResponse = data;
+        });
+
+      console.log('api response', dataResponse)
+
+      let miDiv = document.getElementById("misArticulos");
+
+      miDiv.innerHTML = ''
+
+      let laTablaHtml = toTable(dataResponse)
+
+      miDiv.appendChild(laTablaHtml)
+
+      //dataResponse.forEach(articulo => {
+      //  miDiv.innerHTML +=  articulo.id + " - " + articulo.nombreDeArticulo + "<br/>";
+      //})
+
+    }
+
+    const toTable = (jsonData) => {
+
+      // Create the table element
+      let table = document.createElement("table");
+
+      // Get the keys (column names) of the first object in the JSON data
+      let cols = Object.keys(jsonData[0]);
+
+      // Create the header element
+      let thead = document.createElement("thead");
+      let tr = document.createElement("tr");
+
+      // Loop through the column names and create header cells
+      cols.forEach((item) => {
+        let th = document.createElement("th");
+        th.innerText = item; // Set the column name as the text of the header cell
+        tr.appendChild(th); // Append the header cell to the header row
+      });
+      thead.appendChild(tr); // Append the header row to the header
+      table.append(tr) // Append the header to the table
+
+      // Loop through the JSON data and create table rows
+      jsonData.forEach((item) => {
+        let tr = document.createElement("tr");
+
+        // Get the values of the current object in the JSON data
+        let vals = Object.values(item);
+
+        // Loop through the values and create table cells
+        vals.forEach((elem) => {
+          let td = document.createElement("td");
+          td.innerText = elem; // Set the value as the text of the table cell
+          tr.appendChild(td); // Append the table cell to the table row
+        });
+        table.appendChild(tr); // Append the table row to the table
+      });
+
+      return table;
+    }
+
+
 
   </script>
 
